--- a/web.config
+++ b/web.config
@@ -3,7 +3,8 @@
 <configuration>
 
     <system.web>
-        <compilation debug="false" targetFramework="4.0" />
+        <compilation debug="true" targetFramework="4.0" />
+		<customErrors mode="Off" />
     </system.web>
 
 </configuration>
