keys.aspx in progress

--- a/web.config
+++ b/web.config
@@ -18,5 +18,11 @@
 				<add assembly="MySql.Data, Version=6.3.6.0, Culture=Neutral, PublicKeyToken=c5687fc88969c44d"/>
 			</assemblies>
 		</compilation>
+
+		<pages>
+			<namespaces>
+				<add namespace="Dig" />
+			</namespaces>
+		</pages>
 	</system.web>
 </configuration>
